HighContrast: Fix selection styling in treeviews
This makes selected rows in treeviews show up again.

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -975,7 +975,10 @@ treeview.view {
 
   & rubberband { @extend rubberband; } // to avoid borders being overridden by the previously set props
 
-  &:selected { border-radius: 0; } // rest border radius in lists
+  &:selected {
+    border-radius: 0;
+    @extend %selected_items;
+  }
 
   &:selected, &:backdrop:selected {
     border-left-color: mix($selected_fg_color, $selected_bg_color, 50%);
